fix: visibility

--- a/src/blocks/popup/_opened/popup_opened.css
+++ b/src/blocks/popup/_opened/popup_opened.css
@@ -1,7 +1,5 @@
 .popup_opened {
-
   visibility: visible;
   opacity: 1;
-  /*  transition: opacity 0.2s linear; */
-  transition: visibility 0s linear 0s, opacity 300ms;
+  transition: visibility 0s, opacity 0.3s;
 }
