--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -8,8 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* display: none; */
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s linear 300ms, opacity 300ms;
+  transition: visibility 0.3s, opacity 0.3s;
 }
